--- a/WalletPlus/src/main/res/layout/fragment_tag_details.xml
+++ b/WalletPlus/src/main/res/layout/fragment_tag_details.xml
@@ -49,10 +49,21 @@
         <android.support.v7.widget.CardView android:layout_width="match_parent"
                 android:layout_height="wrap_content">
 
-            <lecho.lib.hellocharts.view.LineChartView android:id="@+id/chart"
-                    android:layout_width="match_parent"
-                    android:layout_height="250dp"
-                    android:padding="@dimen/cardContentPadding"/>
+            <LinearLayout android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:orientation="vertical">
+
+                <TextView android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="center"
+                        android:text="@string/tagChartLabel"/>
+
+                <lecho.lib.hellocharts.view.LineChartView android:id="@+id/chart"
+                        android:layout_width="match_parent"
+                        android:layout_height="300dp"
+                        android:padding="@dimen/cardContentPadding"/>
+            </LinearLayout>
+
         </android.support.v7.widget.CardView>
     </LinearLayout>
 </ScrollView>
