--- a/WalletUDo/src/main/res/layout/fragment_tag_details.xml
+++ b/WalletUDo/src/main/res/layout/fragment_tag_details.xml
@@ -10,58 +10,65 @@
         android:layout_margin="@dimen/cardMargin"
         android:orientation="vertical">
 
-        <android.support.v7.widget.CardView
+        <LinearLayout
+            android:id="@+id/chartContainer"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginBottom="@dimen/cardMargin"
-            android:padding="@dimen/cardContentPadding">
+            android:orientation="vertical">
 
-            <LinearLayout
+            <android.support.v7.widget.CardView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:orientation="vertical">
+                android:layout_marginBottom="@dimen/cardMargin"
+                android:padding="@dimen/cardContentPadding">
 
-                <TextView
-                    android:id="@+id/relatedTagsChartLabel"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_gravity="center"
-                    android:gravity="center" />
-
-                <com.github.mikephil.charting.charts.BarChart
-                    android:id="@+id/relatedTagsChart"
+                <LinearLayout
                     android:layout_width="match_parent"
-                    android:layout_height="300dp"
-                    android:padding="@dimen/cardContentPadding" />
-            </LinearLayout>
+                    android:layout_height="wrap_content"
+                    android:orientation="vertical">
 
-        </android.support.v7.widget.CardView>
+                    <TextView
+                        android:id="@+id/relatedTagsChartLabel"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="center"
+                        android:gravity="center" />
 
-        <android.support.v7.widget.CardView
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginBottom="@dimen/cardMargin"
-            android:padding="@dimen/cardContentPadding">
+                    <com.github.mikephil.charting.charts.BarChart
+                        android:id="@+id/relatedTagsChart"
+                        android:layout_width="match_parent"
+                        android:layout_height="300dp"
+                        android:padding="@dimen/cardContentPadding" />
+                </LinearLayout>
 
-            <LinearLayout
+            </android.support.v7.widget.CardView>
+
+            <android.support.v7.widget.CardView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:orientation="vertical">
+                android:layout_marginBottom="@dimen/cardMargin"
+                android:padding="@dimen/cardContentPadding">
 
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_gravity="center"
-                    android:text="@string/tagChartLabel" />
-
-                <lecho.lib.hellocharts.view.LineChartView
-                    android:id="@+id/chart"
+                <LinearLayout
                     android:layout_width="match_parent"
-                    android:layout_height="300dp"
-                    android:padding="@dimen/cardContentPadding" />
-            </LinearLayout>
+                    android:layout_height="wrap_content"
+                    android:orientation="vertical">
 
-        </android.support.v7.widget.CardView>
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="center"
+                        android:text="@string/tagChartLabel" />
+
+                    <lecho.lib.hellocharts.view.LineChartView
+                        android:id="@+id/chart"
+                        android:layout_width="match_parent"
+                        android:layout_height="300dp"
+                        android:padding="@dimen/cardContentPadding" />
+                </LinearLayout>
+
+            </android.support.v7.widget.CardView>
+        </LinearLayout>
 
         <android.support.v7.widget.CardView
             android:layout_width="match_parent"
