--- a/WalletUDo/src/main/res/layout/activity_drawer.xml
+++ b/WalletUDo/src/main/res/layout/activity_drawer.xml
@@ -29,12 +29,12 @@
             android:focusable="true"
             android:focusableInTouchMode="true" />
 
-        <com.google.android.gms.ads.AdView
-            android:id="@+id/adView"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            ads:adSize="SMART_BANNER"
-            ads:adUnitId="@string/banner_ad_unit_id" />
+        <!--<com.google.android.gms.ads.AdView-->
+            <!--android:id="@+id/adView"-->
+            <!--android:layout_width="match_parent"-->
+            <!--android:layout_height="wrap_content"-->
+            <!--ads:adSize="SMART_BANNER"-->
+            <!--ads:adUnitId="@string/banner_ad_unit_id" />-->
     </LinearLayout>
 
     <!-- Nav drawer -->
