--- a/app/src/main/res/layout/item_statistics_list.xml
+++ b/app/src/main/res/layout/item_statistics_list.xml
@@ -9,7 +9,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentStart="true"
-        android:layout_centerInParent="true"
+        android:layout_centerVertical="true"
         android:layout_marginStart="16dp" />
 
     <com.walletudo.ui.view.AmountView
@@ -17,6 +17,6 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentEnd="true"
-        android:layout_centerInParent="true"
+        android:layout_centerVertical="true"
         android:layout_marginEnd="16dp" />
 </RelativeLayout>
